# veribool

./: .gitignore  LICENSE  README.md  pyproject.toml  verifier.py
.github/workflows/: pypi-publish.yml
veribool/: __init__.py  compiler.py  verifier.py
