[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veribool"
authors = [
    {name = "Ronak Badhe", email = "ronak.badhe@gmail.com"},
]
description = "Verify various properties of boolean expressions using a concise DSL."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["compiler", "verification", "dsl", "boolean", "logic"]
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

# [project.optional-dependencies]
# ext = ["black", "z3"]

[project.scripts]
veribool = "veribool:main"

[project.urls]
Homepage = "https://github.com/r2dev2/veribool"
Repository = "https://github.com/r2dev2/veribool"
Issues = "https://github.com/r2dev2/veribool/issues"

[tool.setuptools]
packages = [ "veribool" ]
